Fixed work panel not going down on mobile size

--- a/src/App.css
+++ b/src/App.css
@@ -238,12 +238,26 @@ main img {
   border-radius: 25px;
   background-color: white;
   opacity: 1;
-  position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
   left: 50%;
   margin-left: -445px;
+  top: 50%;
+  transform: translateY(-50%);
   filter: drop-shadow(0 0 4rem black);
+  position: absolute;
+}
+
+.workModuleOn {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  user-select: none;
+}
+
+.workModuleOff {
+  top: 0%;
+  user-select: none;
 }
 
 #workHero {
@@ -469,7 +483,6 @@ main img {
     height: 100%;
     filter: none;
     border-radius: 0;
-    position: fixed;
     top: 50px;
     left: 0;
     transform: none;
